--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Audio Bookmarklet Maker</title>
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="icon" href="favicon.png" type="image/png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div id='preloader'>
